Thu Oct 30 22:09:17 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_traits.cpp:
        * TAO_IDL/be/be_visitor_valuetype/valuetype_cs.cpp:

          Added tao_release() to the generated Value_Traits<> specialization,
          so the INOUT argument template helper class can release the argument
          at demarshal time with the same call for both interface and
          valuetypes. This extra method has already been added to
          CORBA::ValueBase.

Thu Oct 30 15:01:43 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/AV/Endpoint_Strategy_T.cpp:
	* orbsvcs/tests/Notify/Blocking/Notify_Structured_Push_Consumer.cpp:
	* orbsvcs/tests/Notify/Discarding/Notify_Sequence_Push_Consumer.cpp:
	* orbsvcs/tests/Notify/Discarding/Notify_Structured_Push_Consumer.cpp:
	* orbsvcs/tests/Notify/Ordering/Notify_Sequence_Push_Consumer.cpp:
	* orbsvcs/tests/Notify/Ordering/Notify_Structured_Push_Consumer.cpp:
	* orbsvcs/tests/Notify/Sequence_Multi_ETCL_Filter/Notify_Sequence_Push_Consumer.cpp:
	* orbsvcs/tests/Notify/Sequence_Multi_Filter/Notify_Sequence_Push_Consumer.cpp:
	* orbsvcs/tests/Notify/Structured_Multi_Filter/Notify_Push_Consumer.cpp:
	* orbsvcs/tests/Notify/Structured_Multi_Filter/Notify_Push_Supplier.cpp:
	* orbsvcs/tests/Notify/lib/Command.cpp:
	* orbsvcs/tests/Notify/lib/Command.h:
	* orbsvcs/tests/Notify/performance-tests/Filter/Notify_Sequence_Push_Consumer.cpp:
	* orbsvcs/tests/Notify/performance-tests/Filter/Notify_Structured_Push_Consumer.cpp:

	  Fixed compilation on platforms where exceptions are turned off. 

Thu Oct 30 20:45:00 UTC 2003  Gautam Thaker  <gthaker@atl.lmco.com>

        Please direct all queries regarding this commit to
        Jason Cohen <jcohen@atl.lmco.com>

        * tao/Strategies/SCIOP_Acceptor.cpp:

          Cleaned up commented code.  No functional change.


Thu Oct 30 20:30:00 UTC 2003  Gautam Thaker  <gthaker@atl.lmco.com>
