@@ -75,10 +75,10 @@ client: $(addprefix $(VDIR),$(CLIENT_OBJS))
 	$(LINK.cc) $(LDFLAGS) -o $@ $^ $(TAO_CLNT_LIBS) $(POSTLINK)
 
 server: $(addprefix $(VDIR),$(SERVER_OBJS))
-	$(LINK.cc) $(LDFLAGS) -o $@ $^ -lTAO_IFR_Client -lTAO_DynamicInterface $(TAO_SRVR_LIBS) $(POSTLINK)
+	$(LINK.cc) $(LDFLAGS) -o $@ $^ -lTAO_IFR_Client $(TAO_DYNAMIC_LIBS) $(TAO_SRVR_LIBS) $(POSTLINK)
 
 gateway_server: $(addprefix $(VDIR),$(GATEWAY_SERVER_OBJS))
-		$(LINK.cc) $(LDFLAGS) -o $@ $^ -lTAO_IFR_Client -lTAO_DynamicInterface $(TAO_SRVR_LIBS) $(POSTLINK)
+		$(LINK.cc) $(LDFLAGS) -o $@ $^ -lTAO_IFR_Client $(TAO_DYNAMIC_LIBS) $(TAO_SRVR_LIBS) $(POSTLINK)
 
 realclean: clean
 	-$(RM) $(foreach ext, $(IDL_EXT), Gateway$(ext) ObjectReferenceFactory$(ext) sum_server$(ext))
